# renge-agentic-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  rag笔记.md  开始.md  当前能力与待补充能力清单.md
server/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260420_0001_latest_schema.py
server/app/: __init__.py  main.py
server/app/api/: router.py
server/app/core/: auth.py  config.py  review_rules.py  task_sla.py
server/app/db/: base.py  init_db.py  migrate.py  schema_management.py  session.py
server/app/integrations/: __init__.py  chat_model_provider.py  embedding_provider.py  langfuse_prompt_management.py  langfuse_tracing.py  langgraph_checkpointer.py  llamaindex_embeddings.py  llamaindex_ingestion.py  llamaindex_retrieval.py  local_embeddings.py  qdrant_store.py
server/scripts/: seed_langfuse_prompts.py  validate_postgres_checkpointer.py
server/tests/: conftest.py  helpers.py  test_answer_generation_langfuse.py  test_assistants.py  test_audit_logs.py  test_auth.py  test_chat.py  test_chat_model_provider.py  test_chat_workflow.py  test_config.py  test_documents.py  test_embedding_provider.py  test_evaluation.py  test_health.py  test_init_db.py  test_knowledge_bases.py  test_langfuse_tracing.py  test_langgraph_checkpointer.py  test_llamaindex_ingestion.py  test_llm_pricing.py  test_prompt_management.py  test_retrieval.py  test_review_rules.py  test_reviews.py  test_schema_management.py  test_sessions.py  test_system.py  test_system_evaluations.py
(+164 files in other folders)
